force-app/main/default/objects/Support_Plan__c/Support_Plan__c.object-meta.xml
<CustomObject>
    <label>Support Plan</label>
    <nameField>
        <label>Support Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>