force-app/main/default/objects/Support_Plan__c/fields/Escalation_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Time_Hours__c</fullName>
    <label>Escalation Time Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>